Fixed spacing between paragraphs and lists, updated composer dependencies

--- a/resources/css/aphiria.scss
+++ b/resources/css/aphiria.scss
@@ -444,11 +444,6 @@ blockquote {
         }
     }
 
-    body > header {
-        /* Account for 20px of padding */
-        /*height: $headerLogoHeight + 20px;*/
-    }
-
     body > main {
         /* Account for both the main nav padding and search bar padding, and then pad a little extra so we're not right up against the search bar */
         padding: $headerHeight + 10px 10px 10px 10px;
@@ -583,6 +578,15 @@ blockquote {
 
     p, blockquote, pre[class*="language-"] {
         margin-bottom: 2em !important;
+    }
+
+    /*
+    Make sure there's not too much of a gap between paragraphs and lists.  Since there's no easy way of
+    selecting the paragraph with a CSS combinator, we select the list and give it a negative margin equal
+    to the bottom margin of the paragraph.
+    */
+    p + ul, p + ol {
+        margin-top: -1em !important;
     }
 
     body.home > main pre {
